/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.8/userguide/building_java_projects.html
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

group 'reivosar'
version '1.0'

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    // Java extension
    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    // Apache
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.apache.pdfbox:pdfbox:3.0.0-alpha2'
    implementation 'org.apache.pdfbox:fontbox:3.0.0-RC1'
    implementation 'org.apache.pdfbox:pdfbox-tools:3.0.0-RC1'

    // Google
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'

    // Logger
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-beta0'

    // Junit
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
}

java {
    sourceCompatibility = 21
    targetCompatibility = 21

    withJavadocJar()
    withSourcesJar()
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

wrapper {
    gradleVersion = "7.3"
    distributionType = Wrapper.DistributionType.ALL
}